fix input text alignment

--- a/src/components/Calculator/TipInput/BillAmount/style.module.scss
+++ b/src/components/Calculator/TipInput/BillAmount/style.module.scss
@@ -12,7 +12,7 @@ $placeholder-color: hsl(184, 14%, 56%);
     font-weight: bold;
     width: 100%;
     height: 1.5rem;
-    direction: rtl;
+    text-align: right;
     padding-left: 1.4rem;
 
     &::placeholder {
