--- a/src/components/Calculator/TipInput/NumOfPeople/style.module.scss
+++ b/src/components/Calculator/TipInput/NumOfPeople/style.module.scss
@@ -33,7 +33,7 @@ $error-color: rgba(255, 0, 0, 0.6);
     width: 100%;
     height: 1.5rem;
     font-weight: bold;
-    direction: rtl;
+    text-align: right;
     padding-left: 1.4rem;
 
     &::placeholder {
